static/css/style.css
/* LAYOUT */

body {
  color: #333;
  font-size: 100%;
  font-weight: 100;
  line-height: 1.5;
  max-width: 55rem;
  padding: 1rem;
  margin: 0 auto;
  margin-top: 150px;
  font-family: Roboto, -apple-system, BlinkMacSystemFont, Segoe UI, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  /* font-size: 14px; */
}

a {
  text-decoration: none;
  color: #333;
}

.post-title h2 {
  font-weight: 400;
  font-size: 95%;
  /* border: 2px solid green; */
  margin: 0;
}

.post-title h3 {
  font-weight: 100;
  font-size: 85%;
  /* border: 2px solid green; */
  margin: 0;
}

.post-title p {
  font-weight: 100;
  font-size: 85%;
  /* border: 2px solid green; */
  margin: 0;
}

.post-title {
  z-index: 100;
  /* position: absolute;
  margin-left: -80px; */
  /* background-color: beige; */
  /* border:1px solid chartreuse; */
}

.post-date {
  display: block;
  margin-bottom: 2rem;
  font-style: italic;
}

.content {
  margin-bottom: 2rem;
}

img {
  max-width: 100%;
}

.projekt-container {
  display: flex;
  flex-wrap: wrap;
  /* background-color: sandybrown; */
  /* border: 1px solid purple; */
}

.projekt-item {
  /* background-color: sandybrown; */
  /* border: 1px solid purple; */
  /* height: 400px; */
  width: 400px;
  margin: 0 20px 20px 0;
}

.projekt-item img{
  background-color: blue;
}

.projekt-item img:hover {
  /* border: 1px solid blue; */
  opacity: 0.6;
}

/* profil */
.grid-container {
  display: flex;
  flex-wrap: wrap;
}

.grid-child {
  /* border: 1px solid red; */
  margin-left: 1px;
  height: 300px;
}

.avatar {
  width: 150px;
  height: 200px;
  font-size: 12px;
}

/* NAVIGATION */

.site-nav {
  position: fixed;
  top: 2rem;
  left: 3rem;
  display: flex;
  align-items: baseline;
  /* background-color: rgba(255, 255, 255, 0.349); */
}

.site-nav a {
  display: block;
  margin-right: 2.5rem;
  margin-top: 1.8rem;
  /* padding-bottom: 2rem; */
  font-weight: 100;
  text-decoration: none;
  color: rgb(75, 75, 75);
  /* border: 1px solid cyan; */
  text-align: left;
  /* border: 2px solid blue; */

}

.site-nav .logo {
  width: 80px;
  font-weight: bold;
  padding-left: 0;
  /* background-color: crimson; */
}

.main-menu {
  display: flex;
  list-style: none;
  flex-direction: column;
  margin: 0;
  padding: 0;
}

.sub-menu {
  display: flex;
  list-style: none;
  /* flex-direction: column; */
  margin-left: 150px;
  padding: 0;
  margin-top: 78px;
  background-color: white;
  z-index: 100;

}

.sub-menu a {
  font-size: 85%;
  margin: 2px;
  /* border: 1px solid red; */
}

.main-menu a:hover {
  /* border: 1px solid red; */
  color: #AFB89E;
}

.sub-menu a:hover {
  /* border: 1px solid red; */
  color: #AFB89E;
}

/* @media screen and (max-width: 48rem) {
  .site-nav,
  .main-menu {
    flex-direction: column;
  }

  .site-nav a {
    /* padding: 0.5rem; */
    padding-left: 0;
  }
} */

/* LISTS */

.post-snippet {
  margin-bottom: 1rem;
  text-decoration: none;
  z-index: 0;
  padding-left: 20px;
}

.post-snippet h3 {
  margin-bottom: 0.25rem;
}

